make the project non-spring app